# evtx

./: .POST_PATH  .POST_STREAM_PATH  .PRE_PATH  .cursorignore  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .post_path  .pre_path  .pre_ts  .travis.yml  CHANGELOG.md  CLAUDE.md  COMPACT.md  Cargo.nix  Cargo.toml  Dockerfile  LICENSE-MIT  MS-EVEN6.md  Makefile  OPTIMIZATION.md  PERF.md  PGO_ALLOCATOR_CONFLICT.md  PGO_SEGFAULT_ANALYSIS.md  README.md  azure-pipelines.yml  bench_allocators.sh  build.rs  build_pgo.sh  compare_pgo.sh  flake.nix  profile.sh  profile_comparison.sh  profile_vtune.ps1  release.py  run_viewer.sh  rust-profiler.skill  test_mimalloc_pgo.sh  xml
.cursor/: Dockerfile  environment.json  setup-worktree-unix.sh  setup-worktree-windows.ps1  worktrees.json
.cursor/commands/: fix-github-issue.md  improvement_pass.md  rebase.md
.github/workflows/: codeql-analysis.yml  cxvzcodeql-analysis.yml  deploy-pages.yml  release.yml  test.yml
benches/: test_bench.rs
benchmarks/: benchmark_pair_.txt  omer-pc_ablation_matrix_t1_20251227.json
docs/: compiled-templates.html  performance-optimizations.md  wevt_templates.md
evtx-wasm/: .gitignore  Cargo.toml  README.md  build.ts  package.json  tsconfig.json
evtx-wasm/.cursor/rules/: evtx-state-architecture.mdc  evtx-storage-chunking.mdc  wasm-bindings.mdc
evtx-wasm/evtx-viewer/: eslint.config.js  index.html  package.json  setup-dev.sh  tsconfig.app.json  vite.config.ts
evtx-wasm/evtx-viewer/src/: App.tsx  main.tsx
evtx-wasm/evtx-viewer/src/components/: ColumnManager.tsx  DragDropOverlay.tsx  EventDetailsPane.tsx  FileTree.tsx  FilterBar.tsx  FilterSidebar.tsx  LogRow.tsx  LogTable.tsx  LogTableVirtual.tsx  StatusBar.tsx  index.ts  useRowNavigation.ts
evtx-wasm/evtx-viewer/src/components/FilterSidebar/: FacetSection.tsx  FilterSidebar.tsx  facetUtils.ts  styles.ts  useActiveFilterChips.ts  useFacetCounts.ts
evtx-wasm/evtx-viewer/src/components/Windows/: Button.tsx  ContextMenu.tsx  Dropdown.tsx  MenuBar.tsx  Panel.tsx  ProgressBar.tsx  ScrollableList.tsx  SearchBox.tsx  SelectableRow.tsx  SidebarHeader.tsx  Spinner.tsx  Toolbar.tsx  TreeView.tsx  index.ts
evtx-wasm/evtx-viewer/src/hooks/: useColumns.ts  useEvtxIngest.ts  useEvtxLog.ts  useFilters.ts
evtx-wasm/evtx-viewer/src/lib/: chunkDataSource.ts  columns.tsx  computeSliceRows.ts  dataSource.ts  duckDbDataSource.ts  duckdb.ts  fullIngest.ts  lazyReader.ts  logger.ts  parser.ts  storage.ts  types.ts  useChunkVirtualizer.ts  virtualHelpers.ts
evtx-wasm/evtx-viewer/src/lib/__tests__/: storage.test.ts
evtx-wasm/evtx-viewer/src/state/: StoreBootstrap.tsx  rootReducer.ts  store.tsx
evtx-wasm/evtx-viewer/src/state/columns/: columnsSlice.ts
evtx-wasm/evtx-viewer/src/state/evtx/: evtxSlice.ts
evtx-wasm/evtx-viewer/src/state/filters/: filtersSlice.ts
evtx-wasm/evtx-viewer/src/state/ingest/: ingestSlice.ts
evtx-wasm/evtx-viewer/src/styles/: GlobalStyles.ts  ThemeModeProvider.tsx  styled.d.ts  theme.ts
evtx-wasm/public/: index.html
evtx-wasm/public/assets/: styles.css
evtx-wasm/src/: app.ts  lib.rs  server.ts
evtx-wasm/src/web/: app.js
samples/: 2-system-Microsoft-Windows-GroupPolicy%4Operational.evtx  2-system-Microsoft-Windows-LiveId%4Operational.evtx  2-vss_0-Microsoft-Windows-RemoteDesktopServices-RdpCoreTS%4Operational.evtx  2-vss_0-Microsoft-Windows-TerminalServices-RemoteConnectionManager%4Operational.evtx  2-vss_7-System.evtx  Application_no_crc32.evtx  E_ShadowCopy6_windows_system32_winevt_logs_Microsoft-Windows-CAPI2%4Operational.evtx  E_Windows_system32_winevt_logs_Microsoft-Windows-CAPI2%4Operational.evtx  E_Windows_system32_winevt_logs_Microsoft-Windows-Shell-Core%4Operational.evtx  MSExchange_Management_wec.evtx  Microsoft-Windows-HelloForBusiness%4Operational.evtx  Microsoft-Windows-LanguagePackSetup%4Operational.evtx  Microsoft-Windows-WorkFolders%4WHC.evtx  Security_short_selected.evtx  Security_with_size_t.evtx  application_event_1_separate_attributes.json  event_with_entity_ref.xml  event_with_entity_ref_2.xml  event_with_eventdata.json  event_with_eventdata.xml  event_with_multiple_nodes_same_name.json  event_with_multiple_nodes_same_name_separate_attr.json  event_with_template_as_substitution.xml  event_with_text_and_attributes.json  event_with_text_and_attributes.xml  post-Security.evtx  sample-with-zero-data-size-event.evtx  sample_with_a_bad_chunk_magic.evtx  security_bad_string_cache.evtx  security_event_1.json  security_event_1.xml  security_event_1_separate_attributes.json  sysmon.evtx  system.evtx
samples/mta/: test.csv  test.evtx  test_1033.MTA
scripts/: bench_all_parsers.sh  bench_parsers.sh  bench_refs.sh  bench_utf16_escape_matrix.sh  download_evtx_samples.sh  ensure_quiet.sh  flamegraph_prod.sh  gen_flame.sh  gen_utf16_escape_dataset.py  merge_utf16_escape_matrix.py  perf_evtx_dump.sh  perf_tree_build.sh  run_benchmark_pair.sh  samply_extract_tables.py
src/: arena.rs  binxml.cpp  binxml.rs  err.rs  error.rs  evtx.rs  evtx_chunk.rs  evtx_chunk_header.rs  evtx_file_header.rs  evtx_filter.rs  evtx_parser.rs  evtx_record.rs  evtx_structure.rs  guid.rs  hexdump.rs  json_output.rs  json_stream_output.rs  json_writer.rs  lib.rs  macros.rs  model.rs  mta.rs  ntsid.rs  string_cache.rs  template_cache.rs  tree_builder.rs  wevt_templates.rs  xml_builder.rs  xml_output.rs
tests/: fixtures.rs  test_cli.rs  test_cli_interactive.rs  test_full_samples.rs  test_full_samples_streaming.rs  test_mta.rs  test_mta_debug.rs  test_record_id_public.rs  test_record_samples.rs  test_record_separate_json.rs  test_recovered_events.rs  test_streaming_eventdata_aggregated.rs  test_streaming_parity_all_samples.rs  test_wevt_cache_fallback.rs  test_wevt_templates.rs
utf16-simd/: Cargo.toml  README.md
utf16-simd/benches/: utf16_json.rs
utf16-simd/fuzz/: .gitignore  Cargo.toml
utf16-simd/fuzz/fuzz_targets/: json_utf16.rs  json_utf16le.rs  raw_utf16.rs  raw_utf16le.rs  xml_utf16.rs  xml_utf16le.rs
utf16-simd/src/: lib.rs  perf.rs  scalar.rs  simd.rs
utf16-simd/tests/: escape.rs
wevt_cache_demo/: index.jsonl
(+94 files in other folders)
