[package]
name = "evtx"
description = "A fork of the evtx Rust crate for Hayabusa."
homepage = "https://github.com/Yamato-Security/hayabusa-evtx"
repository = "https://github.com/Yamato-Security/hayabusa-evtx"
license = "MIT"
readme = "README.md"

version = "0.7.3"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>, Yamato Security"]
edition = "2021"

exclude = [
    "**/*.evtx",
    "**/*.dat",
]

[dependencies]
bitflags = "1.3.2"
crc32fast = "1.3.2" 
chrono = { version = "0.4.19", features = ["serde"] }
encoding = "0.2.33"
byteorder = "1.4.3"
quick-xml = "^0.23"
thiserror = "1.0.31"
nix = "0.24.1"
log = { version = "0.4.17", features = ["release_max_level_debug"] } 
winstructs = "0.3.0"
# Optional for multithreading.
rayon = { version = "1.5.0", optional = true }

# `evtx_dump` dependencies
anyhow = { version = "1.0", optional = true }
simplelog = { version = "^0.10", optional = true }
clap = { version = "2.33.3", optional = true }
dialoguer = { version = "0.9", optional = true }
indoc = { version = "1.0", optional = true }

serde = "1.0"
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies]
# jemalloc is significantly more peformant than the system allocator.
jemallocator = { version = "0.5.0", optional = true }

[target.'cfg(windows)'.dependencies]
# jemalloc is significantly more peformant than the system allocator.
rpmalloc = { version = "0.2.2", optional = true }


[features]
default = ["multithreading", "evtx_dump"]
fast-alloc = ["jemallocator", "rpmalloc"]
evtx_dump = ["simplelog", "clap", "dialoguer", "indoc", "anyhow"]
multithreading = ["rayon"]

[dev-dependencies]
pretty_assertions = "1.2.1"
criterion = "0.3.5"
assert_cmd = "^2.0"
predicates = "2.1.1"
env_logger = "0.9.0"
tempfile = "3.3.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

# rexpect relies on unix process semantics, but it's only used for process interaction tests.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rexpect = "0.4.0"

[build-dependencies]
skeptic = "0.13.7"

[[bin]]
name = "evtx_dump"
required-features = ["evtx_dump"]

[[bench]]
name = "benchmark"
path = "./src/benches/benchmark.rs"
harness = false
