[package]
name = "evtx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
evtx = { path = "..", default-features = false, features = [] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
arrow2 = { version = "0.18", features = ["io_ipc"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
